# annnet

./: .bumpversion.cfg  .codecov.yaml  .coverage  .coveragerc  .gitignore  404.html  OVERVIEW.md  README.md  architecture.md  benchmark_results.json  environment.yml  graph_history.parquet  index.html  mkdocs-online.yml  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  sitemap.xml
.github/workflows/: ci-docs.yml  ci-security.yml  ci-testing-unit.yml
API_demo_notebook/: index.html
about/: index.html
annnet/: __init__.py  _dataframe.py  _dataframe_backend.py  _metadata.py  _optional_components.py  _plotting_backend.py
annnet-project/design-philosophy/: index.html
annnet-project/project/: index.html
annnet-project/use-cases/: index.html
annnet/_support/: __init__.py  dataframe_backend.py  graph_records.py  lazy_exports.py  metadata.py  optional_components.py  plotting_backend.py  serialization.py  serialization_policy.py
annnet/adapters/: GraphDir_Parquet_adapter.py  GraphDir_Parquet_io.py  GraphML_adapter.py  SBML_adapter.py  SIF_adapter.py  SIF_io.py  __init__.py  _common.py  _utils.py  cx2_adapter.py  dataframe_adapter.py  graphtool_adapter.py  igraph_adapter.py  json_adapter.py  json_io.py  manager.py  networkx_adapter.py  pyg_adapter.py  sbml_cobra_adapter.py
annnet/algorithms/: __init__.py  traversal.py
annnet/core/: _Annotation.py  _BulkOps.py  _Cache.py  _CacheManager.py  _GraphDiff.py  _GraphView.py  _History.py  _Index.py  _IndexManager.py  _LayerManager.py  _Layers.py  _Matrix.py  _Ops.py  _SliceManager.py  _Slices.py  _Views.py  __init__.py  _build.py  _derive.py  _helpers.py  _identity.py  _mutate.py  _records.py  _state.py  _validate.py  graph.py
annnet/experimental/: __init__.py
annnet/io/: GraphDir_Parquet_io.py  GraphML_io.py  Parquet_io.py  SBML_io.py  SIF_io.py  __init__.py  _archive.py  _common.py  _utils.py  annnet_format.py  csv.py  csv_format.py  csv_io.py  cx2.py  cx2_io.py  dataframe_io.py  dataframes.py  excel.py  graphml.py  io_annnet.py  json_format.py  json_io.py  omnipath.py  parquet.py  read_omnipath.py  sbml.py  sbml_cobra.py  sbml_cobra_io.py  sif.py
annnet/utils/: __init__.py  plotting.py  typing.py  validation.py
annnet_showcase/: index.html
api/: annnet.demo.rst  annnet.io.rst  annnet.rst  modules.rst
assets/: overrides.css
benchmarks/: README.md  __init__.py  adapters.py  engines.py  environment.py  harness.py  io_formats.py  report.py  run.py  scales.py  specsheet.py  workloads.py
benchmarks/adapters/: adapters.py
benchmarks/cases/: __init__.py  accessors.py  annotations.py  backends.py  common.py  primitives.py
benchmarks/core/: attributes.py  edge_entities.py  expressiveness.py  history_cache.py  layers.py  slices.py  views_algorithms.py
benchmarks/harness/: metrics.py  report.py  runner.py  scales.py
benchmarks/io/: annnet_io.py
benchmarks/reporting/: __init__.py  common.py  markdown.py  plots.py  regenerate.py  specsheet.py
community/: index.html
community/contribute/: index.html
community/contribute-codebase/: index.html
community/contribute-docs/: index.html
docs/: Demo.ipynb  SBUC-Copy1.ipynb  SBUC.py  SysBio use case.ipynb  about.md  index.md  installation.md  io_annnet.md  ppi_example.ipynb  quickstart.md  sbml_io.ipynb  stress_notebook.ipynb  testing_new_updates.ipynb
docs/annnet-project/: design-philosophy.md  project.md  use-cases.md
docs/assets/: overrides.css
docs/community/: contribute-codebase.md  index.md
docs/explanations/: add-edges.md  architecture-overview.md  common-patterns.md  design-philosophy.md  history-and-diffs.md  index.md  internal-representation.md  interoperability.md  io-annnet.md  managers-and-views.md  math-incidence.md  math-multilayer.md  mutation-and-derived-state.md
docs/reference/: SUMMARY.md  algorithms.md  annnet_core.md  annnet_layers.md  annnet_slices.md  api-boundary.md  api.md  api_core.md  api_managers.md  api_mixins.md  index.md  interoperability.md  storage.md  support.md
docs/tutorials/: analysis-patterns.md  index.md  use-cases.md
explanations/: index.html
explanations/add-edges/: index.html
installation/: index.html
io_annnet/: index.html
notebooks/: 00_showcase.ipynb  API_demo_notebook.ipynb  AnnNet x AnnData.ipynb  Demo.ipynb  Elowitz.sbml.xml  Haridansyah2019.sbml  SBUC-nopolars.ipynb  SBUC.ipynb  SBUClub.ipynb  SBUCmini.ipynb  SysBio use case.ipynb  UC1.ipynb  UC2.ipynb  Virus.ipynb  _UC1.ipynb  annnet_showcase.ipynb  benchmark.ipynb  environment-annnet-anndata.yml  f_test.cx2  info_api_showcase.ipynb  ppi_example.ipynb  sbml_io.ipynb  sbuc.cx2  stress_notebook.ipynb  test.annnet  testing_new_updates.ipynb
ppi_example/: index.html
quickstart/: index.html
reference/: index.html
sbml_io/: index.html
search/: search_index.json
source/: annnet.adapters.rst  annnet.algorithms.rst  annnet.core.rst  getting_started.rst  index.rst
stress_notebook/: index.html
testing_new_updates/: index.html
tests/: conftest.py  test_SBML_adapter.py  test_annnet_format.py  test_annnet_format_multilayer_roundtrip.py  test_annnet_format_roundtrip_strict.py  test_annotation_backend_parity.py  test_annotation_coverage.py  test_backend_accessor_base_coverage.py  test_backend_accessor_keys.py  test_batch_attr_propagation.py  test_benchmark_cases.py  test_bugfixes_surfaced_by_scv5.py  test_cache_invalidation.py  test_cross_adapter.py  test_csv.py  test_csv_format_coverage.py  test_cx2_adapter.py  test_cx2_coverage.py  test_dataframe_adapter.py  test_dunder_methods.py  test_edge_cases.py  test_excel.py  test_get_edge_view.py  test_gexf_adapter.py  test_graph.py  test_graph_coverage.py  test_graph_records_coverage.py  test_graph_views.py  test_graphdir_adapter.py  test_graphml_adapter.py  test_graphtool.py  test_gt_backend_accessor.py  test_history.py  test_ig_backend_accessor.py  test_igraph.py  test_igraph_adapter_coverage.py  test_import_boundaries.py  test_integration.py  test_io_annnet.py  test_io_round_trips.py  (+37 more)
tools/: gen_reference.py  generate_docs_notebooks.py  import_graph.py  mkdocs_hooks.py
tutorials/: index.html
(+237 files in other folders)
