[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "distlib",
    "pre-commit>=2.17.0",
    "bump2version",
    "twine",
    "black>=24.0",
    "mypy>=1.0"
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.25",
    "mkdocs-autorefs>=1.0"
]
tests = [
    "pytest>=7.0",
    "tox>=4.11",
    "tox-gh>=1.5.0",
    "coverage>=6.0",
    "codecov-cli>=10.2.0",
    "diff_cover",
    "ruff",
    "narwhals>=1.9"
]

[lint.isort]
balanced-wrapping = true
case-sensitive = false
combine-as-imports = true
exclude = [
    "docs/_build"
]
force-sort-within-sections = true
force-wrap-aliases = true
include-trailing-comma = true
indent = "    "
known-first-party = ["annnet"]
known-third-party = ["numpy", "pandas"]
length-sort = true
lines-after-imports = 1
multi-line-output = 3
no-lines-before = ["LOCALFOLDER"]
order-by-type = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "NUM",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
use-parentheses = true

[lint.per-file-ignores]
"*/__init__.py" = ["D104", "F401"]
"docs/*" = ["I"]
"tests/*" = ["D"]
"tests/conftest.py" = ["D101", "D102", "D103", "E402"]

[lint.pydocstyle]
convention = "numpy"

[lint.quotes]
inline-quotes = "single"

[project]
authors = [
    { name = "Youssef Zerta", email = "youssef.zerta@biomedtech.ueuromed.org" },
    { name = "Bottazzi Daniele", email = "daniele.bottazzi@mail.polimi.it" },
    { name = "Denes Turei", email = "turei.denes@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20.0",
    "scipy>=1.10",
]
description = "A Python tool to build, manipulate, and interoperate with flexible graph structures"
license = "BSD-3-Clause"
maintainers = [
    { name = "Bottazzi Daniele", email = "daniele.bottazzi@mail.polimi.it" },
    { name = "Youssef Zerta", email = "youssef.zerta@biomedtech.ueuromed.org" }
]
name = "annnet"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
networkx = ["networkx>=3.3"]
igraph   = ["python-igraph>=0.11"]
pandas = ["pandas>=1.5"]
excel    = ["openpyxl>=3.1"]          # used by annnet/io/excel.py
sbml     = ["lxml>=4.9"]                # used by sbml_adapter.py
parquet  = ["pyarrow>=10"]            # used by GraphDir_Parquet_adapter.py
zarr_io  = ["zarr>=2.18", "numcodecs>=0.12"]  # used by io_annnet.py
matplotlib  = ["matplotlib>=3.5"]
io = [
  "pandas>=2.0",    # excel loader needs it
  "pyarrow>=10",    # parquet adapter
  "zarr>=2.18",
  "numcodecs>=0.12",
  "lxml>=4.9",        # SBML adapter
  "toml>=0.10",     # metadata loading
  "narwhals>=1.9",
]
backends = [
  "networkx>=3.3",
  "python-igraph>=0.11",
  # graphtool cannot be installed via pip
]
plot = [
  "matplotlib>=3.5",
  "pydot",
  "graphviz"
]
bio = [
  "lxml>=4.9",
  "cobra>=0.26"
]
storage = [
  "pyarrow>=10",
  "zarr>=2.18",
  "numcodecs>=0.12",
  "pandas>=2.0"
]

# "everything"
all = [
  "networkx>=3.3",
  "python-igraph>=0.11",
  "openpyxl>=3.1",
  "lxml>=4.9",
  "pyarrow>=10",
  "zarr>=2.18",
  "numcodecs>=0.12",
  "matplotlib>=3.5",
  "pandas>=1.5",
  "pydot",
  "graphviz",
  "cobra>=0.26",
  "toml>=0.10",
  "narwhals>=1.9",
  # graphtool is not on PyPI
]



# make CI tools installable via `.[dev]`
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
  "twine>=5.0",
]

# unit-test helpers via `.[tests]`
tests = [
  "coverage>=6.0",
  "tox>=4.11",
  "tox-gh>=1.5.0",
  "diff_cover",
  "codecov-cli>=10.2.0",
  "narwhals>=1.9",
]

# switch docs extra to **MkDocs** (workflows call mkdocs)
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-jupyter>=0.25",
]

[tool.hatch.build]
exclude = [
  "**/__pycache__/**",
  "**/.ipynb_checkpoints/**"
]

[tool.hatch.build.targets.wheel]
packages = ["annnet"]

[tool.hatch.build.targets.sdist]
include = [
  "annnet",
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "docs/**/*.ipynb",
  "docs/**/*.md",
  "docs/Elowitz.sbml.xml",
]


[project.scripts]
an = "annnet:main"
an-demo = "annnet.demo.demo:main"

[project.urls]
Documentation = "https://annnet.readthedocs.io/"
Homepage = "https://github.com/saezlab/annnet"
Issues = "https://github.com/saezlab/annnet/issues"
Repository = "https://github.com/saezlab/annnet"

[tool.coverage.run]
omit = [
    "**/test_*.py"
]
source = ["annnet"]

[tool.cruft]
skip = [
    "tests",
    "annnet/__init__.py",
    "annnet/_metadata.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]

[tool.pytest.ini_options]
addopts = [
    # "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib"  # allow using test files with same name
]
filterwarnings = [
]
python_files = "test_*.py"
testpaths = [
    "tests"
]
xfail_strict = true

[tool.rstcheck]
ignore_directives = [
    "automodule",
    "toctree"
]
ignore_messages = '(Unknown target name:.*|No (directive|role) entry for "(auto)?(class|method|property|function|func|mod|attr)" in module "docutils\.parsers\.rst\.languages\.en"\.)'
ignore_roles = ["ref"]
report_level = "INFO"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 100
target-version = "py312"
unfixable = ["UP"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.ruff.lint]
ignore = [
    "B008",  # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B024",
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # __magic__ methods are often self-explanatory, allow missing docstrings
    "D107",  # Missing docstring in __init__
    # Disable one in each pair of mutually incompatible rules
    "D200",
    "D202",
    "D203",  # We don't want a blank line before a class docstring
    "D213",  # <> We want docstrings to start immediately after the opening triple quote
    "D400",  # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D401",  # First line should be in imperative mood; try rephrasing
    "E501",  # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E731",  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E741",  # allow I, O, l as variable names -> I is the identity matrix
]

select = [
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error detected by Pycodestyle
    "F",  # Errors detected by Pyflakes
    "I",  # isort
    "RUF100",  # Report unused noqa directives
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # Warning detected by Pycodestyle
    "Q",  # Consistent quotes
    "S307",  # eval() detection
    "ANN"  # flake8-annotations
]

[tool.tox]
env_list = [
    "covclean",
    "lint",
    "py{39,310,311,312,313}",
    "coverage",
    "readme",
    "docs"
]
isolated_build = true
min_version = "4.0"
skip_missing_interpreters = true

[tool.tox.envs]
base_python = [
    "py39: python3.9",
    "py310: python3.10",
    "py311: python3.11",
    "py312: python3.12",
    "py313: python3.13"
]
commands = [
    "pytest --cov --cov-append --cov-config={toxinidir}/.coveragerc --ignore docs/ {posargs:-vv {env:_PYTEST_TOX_POSARGS:}}"
]
deps = [
    ".[tests]"
]
passenv = "TOXENV,CI,CODECOV_*,GITHUB_ACTIONS"
platform = [
    "linux: linux",
    "macos: (macos|osx|darwin)"
]
usedevelop = true

[tool.tox.env.clean-docs]
changedir = "{toxinidir}"
skip_install = true
allowlist_externals = []
commands = [
  ["uv", "sync", "--group", "docs"],
  ["uv", "run", "mkdocs", "build", "--clean"]
]

[tool.tox.env.covclean]
skip_install = true
deps = [".[tests]"]
commands = [
  ["coverage", "erase"]
]

[tool.tox.env.coverage]
skip_install = true
deps = [".[tests]"]
depends = ["py39", "py310", "py311", "py312", "py313"]
parallel_show_output = true
commands = [
  ["coverage", "report", "--omit=tox/*"],
  ["coverage", "xml", "--omit=tox/*", "-o", "{toxinidir}/coverage.xml"],
  ["diff-cover", "--compare-branch", "origin/main", "{toxinidir}/coverage.xml"]
]

[tool.tox.env.lint]
skip_install = true
deps = [".[dev]"]
commands = [
  ["pre-commit", "run", "--all-files", "--show-diff-on-failure"]
]

[tool.tox.env.readme]
skip_install = true
allowlist_externals = ["uv"]
deps = [".[dev]"]
commands = [
  ["uv", "build", "--wheel", "--out-dir", "{envtmpdir}/build"],
  ["twine", "check", "{envtmpdir}/build/*"]
]

[tool.tox.env.py313]
setenv = "_PYTEST_TOX_POSARGS=--log-cli-level=ERROR"


[tool.tox.env.docs]
description = "Build the documentation (MkDocs)."
skip_install = true
allowlist_externals = ["uv", "python"]
commands = [
  ["uv", "sync", "--group", "docs"],
  ["uv", "run", "mkdocs", "build", "--strict"],
  ["python", "-c",
   "import pathlib; print('Documentation is available under:', pathlib.Path('{toxinidir}')/'site'/'index.html')"]
]

[tool.tox-gh-actions]
env = [
    "py313: covclean, lint, coverage, readme, docs"
]
python = [
    "3.9: py39",
    "3.10: py310",
    "3.11: py311",
    "3.12: py312",
    "3.13: py313"
]

[tool.uv.sources]
jupyter-contrib-nbextensions = {git = "https://github.com/deeenes/jupyter_contrib_nbextensions.git", branch = "master"}
nbsphinx = {git = "https://github.com/deeenes/nbsphinx", branch = "timings"}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
graph-tool = "*"

[tool.pixi.pypi-dependencies]
annnet = { path = ".", editable = true, extras = ["tests", "dev", "networkx", "igraph", "pandas", "excel", "sbml", "parquet", "zarr_io"]}

[tool.pixi.environments]
dev = { solve-group = "default" }

[tool.pixi.tasks]
_pytest = { cmd = "pytest" }
test-all = { depends-on = [{ task = "_pytest", environment = "dev" }] }
